--- a/src/common/layouts/Footer/index.scss
+++ b/src/common/layouts/Footer/index.scss
@@ -6,7 +6,7 @@
 
   border-top: .6px solid lightgrey;
 
-  background-color: white;
+  background-color: $footer-background-color;
   padding: 15px;
 
   z-index: 5;
