--- a/app/src/weather/layouts/header/index.scss
+++ b/app/src/weather/layouts/header/index.scss
@@ -1,5 +1,20 @@
 @import "assets/styles/abstracts/variables";
 
 .header {
+  display: flex;
+  align-items: center;
   background: $header-background;
 }
+
+.trigger {
+  padding: 0 1.4rem;
+  font-size: 1rem;
+  line-height: 4rem;
+  cursor: pointer;
+  transition: color 0.3s;
+
+  &:hover {
+    color: #1890ff;
+  }
+}
+
