--- a/app/src/weather/components/presentational/weather-card-list/index.scss
+++ b/app/src/weather/components/presentational/weather-card-list/index.scss
@@ -1,4 +1,12 @@
 .ant-card-body {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+}
+
+.weather-card-list {
+  &__item {
+    &:not(:last-of-type) {
+      margin-bottom: 1rem;
+    }
+  }
 }
