fix(layout): Added responsibility

--- a/app/src/assets/styles/abstracts/_mixins.scss
+++ b/app/src/assets/styles/abstracts/_mixins.scss
@@ -3,3 +3,15 @@
     cursor: pointer;
   }
 }
+
+@mixin breakpoint-from($breakpoint) {
+  @media screen and (min-width: $breakpoint) {
+    @content;
+  }
+}
+
+@mixin breakpoint-to($breakpoint) {
+  @media screen and (max-width: $breakpoint) {
+    @content;
+  }
+}
