--- a/app/src/weather/layouts/weather-layout/index.scss
+++ b/app/src/weather/layouts/weather-layout/index.scss
@@ -1,3 +1,6 @@
+@import "assets/styles/abstracts/variables";
+@import "assets/styles/abstracts/mixins";
+
 .weather-layout {
   min-height: 100vh;
 
@@ -5,5 +8,12 @@
     position: relative;
     min-height: 12rem;
     padding: .625rem 1.25rem;
+    transition: opacity .5s;
+
+    &_collapsed {
+      @include breakpoint-to($mobile) {
+        opacity: 0;
+      }
+    }
   }
 }
