--- a/app/src/weather/components/presentational/weather-card-row/index.scss
+++ b/app/src/weather/components/presentational/weather-card-row/index.scss
@@ -62,6 +62,11 @@
     }
   }
 
+  &__cloud {
+    width: 1.5rem;
+    margin-right: .2rem;
+  }
+
   &__actions {
     display: flex;
     flex-direction: column;
@@ -69,6 +74,7 @@
 
   &__action {
     font-size: 1.2rem;
+    color: $black;
 
     @include pointer-on-hover();
 
