--- a/app/src/weather/components/presentational/forecast/forecast-card-row/index.scss
+++ b/app/src/weather/components/presentational/forecast/forecast-card-row/index.scss
@@ -1,4 +1,5 @@
 @import "assets/styles/abstracts/variables";
+@import "assets/styles/abstracts/mixins";
 
 .forecast-card-row {
   .ant-list-item-main {
@@ -7,12 +8,18 @@
     align-items: center;
   }
 
+  @include breakpoint-to($mobile) {
+    .ant-list-item-extra {
+      margin: 0;
+    }
+  }
+
   &__title {
     font-weight: $bold;
   }
 
   &__temp {
-    margin: 0;
+    margin: 0 1rem 0 0;
     font-size: 1.5rem;
     font-weight: 700;
   }
