--- a/app/src/weather/pages/weather/index.scss
+++ b/app/src/weather/pages/weather/index.scss
@@ -1,3 +1,6 @@
+@import "assets/styles/abstracts/variables";
+@import "assets/styles/abstracts/mixins";
+
 .weather {
   display: flex;
   flex-direction: column;
@@ -5,7 +8,11 @@
 
   &__current,
   &__forecast {
-    width: 80%;
+    width: 95%;
+
+    @include breakpoint-to($mobile) {
+      width: 100%;
+    }
   }
 
   &__forecast {
