--- a/app/src/weather/layouts/header/index.scss
+++ b/app/src/weather/layouts/header/index.scss
@@ -3,8 +3,13 @@
 .header {
   display: flex;
   align-items: center;
-  padding: 0;
-  background: $header-background;
+
+  /* TODO: Remove important (dark theme styles) */
+  padding: 0 !important;
+
+  &__light {
+    background: $header-background !important;
+  }
 
   &__title {
     margin-bottom: 0;
