--- a/app/src/assets/styles/main.scss
+++ b/app/src/assets/styles/main.scss
@@ -1,2 +1,7 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
+
+// TODO: Remove important
+.ant-input {
+  border-radius: .4rem !important;
+}
