--- a/app/src/weather/pages/not-found/index.scss
+++ b/app/src/weather/pages/not-found/index.scss
@@ -1,4 +1,5 @@
 @import "assets/styles/abstracts/variables";
+@import "assets/styles/abstracts/mixins";
 
 .not-found {
   display: flex;
@@ -14,10 +15,23 @@
 
   &__title {
     font-size: 3rem;
+    font-weight: $bold;
   }
 
   &__link {
     font-size: 1.2rem;
     color: $black;
+  }
+
+  &__moon {
+    width: 13rem;
+
+    @include breakpoint-to($mobile) {
+      width: 10rem;
+    }
+
+    @include breakpoint-to($mobile-sm) {
+      width: 7rem;
+    }
   }
 }
