refactor(styles): Extracted vars

--- a/app/src/assets/styles/abstracts/_mixins.scss
+++ b/app/src/assets/styles/abstracts/_mixins.scss
@@ -4,6 +4,10 @@
   }
 }
 
+@mixin without-select() {
+  user-select: none;
+}
+
 @mixin breakpoint-from($breakpoint) {
   @media screen and (min-width: $breakpoint) {
     @content;
