--- a/app/src/weather/components/presentational/error/index.scss
+++ b/app/src/weather/components/presentational/error/index.scss
@@ -1,5 +1,7 @@
+@import "assets/styles/abstracts/variables";
+
 .error {
-  color: red;
+  color: $error-color;
 
   &::first-letter {
     text-transform: capitalize;
