--- a/app/src/weather/layouts/header/index.scss
+++ b/app/src/weather/layouts/header/index.scss
@@ -16,12 +16,12 @@
 
   &__trigger {
     padding: 0 1.4rem;
-    font-size: 1rem;
+    font-size: $header-trigger-font-size;
+    transition: $header-trigger-transitions;
     cursor: pointer;
-    transition: color 0.3s;
 
     &:hover {
-      color: #1890ff;
+      color: $header-trigger-hover-color;
     }
   }
 }
